# EchoLogger

./: CMakeLists.txt  EchoLoggerConfig.cmake.in  LICENSE.txt  Makefile.am  README.md  bootstrap.sh  configure.ac
include/: EchoLogger.h
src/: EchoLogger.c  Internal.h  Makefile.am
